--- a/.github/workflows/default-env.yml
+++ b/.github/workflows/default-env.yml
@@ -15,8 +15,8 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This workflow contains a single job called "default-env-variables"
+  default-env-variables:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -25,6 +25,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      - name: Testing Secrets
+        run: |
+         echo "$DEVOPS"
+        env:
+         DEVOPS: ${{ secrets.SECRETS_TOKEN }}
+         
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
