Add an error in using a variable that is not in env

--- a/.github/workflows/default-env.yml
+++ b/.github/workflows/default-env.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Testing Secrets
         run: |
-         echo "$DEVOPS"
+         echo "$DEVOP"
         env:
          DEVOPS: ${{ secrets.SECRETS_TOKEN }}
          
